Adding redis